--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -36,7 +36,7 @@ jobs:
       packages: write
     steps:
       - name: Upload Rock to GHCR
-        if: github.event.repository.visibility != "public" || !matrix.pro-enabled
+        if: ${{ github.event.repository.visibility != "public" || !matrix.pro-enabled }}
         uses: canonical/oci-factory/.github/actions/upload-rock@main
         with:
           artifact_name: ${{ matrix.artifact-name }}
