--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -47,7 +47,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
   upload-registries:
-    needs: [read-config, test]
+    needs: [read-config]
     if: |
       needs.read-config.outputs.upload-matrix != '{"include": []}'
     strategy:
