--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -41,7 +41,7 @@ jobs:
     if: github.event.repository.visibility == 'public'
     strategy:
       matrix: ${{ fromJSON(needs.read-config.outputs.build-matrix) }}
-    uses: canonical/oci-factory/.github/workflows/Build-Rock.yaml@main
+    uses: canonical/oci-factory/.github/workflows/Build-Rock.yaml@22bc03df0484a4aa7aa12ea80c04a6e6cd1382bd
     with:
       pro-services: ${{ matrix.pro-services }}
       rock-repo: ${{ github.repository }}
