--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Read .github/ci.yaml
         id: read-ci-config
-        uses: canonical/rocks-template-actions/actions/read-ci-config@v1
+        uses: canonical/rocks-template-actions/actions/read-ci-config@4c02e00c3097551b7e5735619185f8b1e179f4f1
 
   get-runners:
     runs-on: ubuntu-latest
